adding support for s3

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info,
+           fail_on_warning,
+           {parse_transform, lager_transform}]}.
 {deps, [
        {nkpacket, {git, "http://github.com/NetComposer/nkpacket", {branch, "ng"}}}
        ]}.
