--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,5 @@
            fail_on_warning,
            {parse_transform, lager_transform}]}.
 {deps, [
-       {nkpacket, {git, "http://github.com/NetComposer/nkpacket", {branch, "v09"}}}
+       {nkpacket, {git, "http://github.com/NetComposer/nkserver", {branch, "master"}}}
        ]}.
